--- a/Inspiration.html
+++ b/Inspiration.html
@@ -34,18 +34,18 @@
         </article>
     <picture>
         <!--Billedet til mobil-->
-        <source srcset="Images/Inspiration_mobil.png" media="(max-width:600px)">
+        <source srcset="images/inspirationmobil.png" media="(max-width:600px)">
         <!--Billedet til desktop-->
-        <img src="Images/Inspiration.png" alt="Inspo" id="Inspo">
+        <img src="images/inspiration.png" alt="Inspo" id="Inspo">
     </picture>
     <picture>
     <article>
         <p>Nedenfor får du vores bedste tips og tricks til valg af billederammer</p>
         </article>
         <!--Billedet til mobil-->
-        <source srcset="Images/rammermobil.png" media="(max-width:600px)">
+        <source srcset="images/rammermobil.png" media="(max-width:600px)">
         <!--Billedet til desktop-->
-       <img src="Images/Rammer.png" alt="Rammer" id="Rammer">
+       <img src="images/Rammer1.png" alt="Rammer" id="Rammer">
     </picture>
 </section>
 <section class="udvid">
@@ -71,7 +71,7 @@
         TLF.86120571<br></p>
     </div>
     <div class="footer-section">
-        <img src="Images/Face&Insta.png" alt="Facebook" id="Facebook">
+        <img src="images/Face&Insta.png" alt="Facebook" id="Facebook">
     </div>
 </footer>
 </body>
