--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <nav class="main-nav">
       <ul>
         <li><a href="galleri.html">GALLERI</a></li>
-        <li><a href="inspiration.html">INSPIRATION</a></li>
+        <li><a href="Inspiration.html">INSPIRATION</a></li>
         <li><a href="kunstnere.html">KUNSTNERE</a></li>
         <li><a href="#">BUTIKKEN</a></li>
     </ul>
@@ -114,7 +114,7 @@
         TLF.86120571<br></p>
     </div>
     <div class="footer-section">
-        <img src="Images/Face&Insta.png" alt="Facebook" id="Facebook">
+        <img src="images/Face&Insta.png" alt="Facebook" id="Facebook">
     </div>
 </footer>
 
