--- a/galleri.html
+++ b/galleri.html
@@ -118,11 +118,10 @@
         <img src="images/arne_jacobsen_skovshoved_tankstation.jpg" alt="berlin">
       <div class="plakattekst">
         <h4>Berlin Shapes No1 Poster</h4>
-        <p>Grafisk illustration med sorte og beige figurer og cirkler. </div>
+        <p>Grafisk illustration med sorte og beige figurer og cirkler. 
         </p>
-   
-        </div>
-    </div>
+   </div>
+   </div>
 
 
     <div class="plakat">
@@ -196,7 +195,7 @@
         TLF.86120571<br></p>
     </div>
     <div class="footer-section">
-        <img src="Images/Face&Insta.png" alt="Facebook" id="Facebook">
+        <img src="images/Face&Insta.png" alt="Facebook" id="Facebook">
     </div>
 </footer>
 
