--- a/kunstnere.html
+++ b/kunstnere.html
@@ -19,7 +19,7 @@
             <label for="menu-bar" class="burger-label">☰</label>
             <ul>
                 <li><a href="galleri.html">GALLERI</a></li>
-                <li><a href="inspiration.html">INSPIRATION</a></li>
+                <li><a href="Inspiration.html">INSPIRATION</a></li>
                 <li><a href="kunstnere.html">KUNSTNERE</a></li>
                 <li><a href="x">BUTIKKEN</a></li>
             </ul>
@@ -126,7 +126,7 @@
             TLF.86120571<br></p>
         </div>
         <div class="footer-section">
-            <img src="Images/Face&Insta.png" alt="Facebook" id="Facebook">
+            <img src="images/Face&Insta.png" alt="Facebook" id="Facebook">
         </div>
     </footer>
 
