--- a/Inspiration.html
+++ b/Inspiration.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>inspiration</title>
-    <!-- Tilføj Google Fonts link -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/inspiration.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!--METATAGS-->
+   <meta name="title" content="PLAKATEN.COM | INSPIRATION">
+   <meta name="description" content="“Bliv inspireret til at skabe din egen unikke billedvæg hos Plakaten. Få tips og tricks til at vælge de rigtige billeder og rammer, og lær, hvordan du kan sammensætte en personlig og stilfuld indretning. Se vores bedste idéer til at give dit hjem et kunstnerisk præg.”">
+   <meta name="keywords" content="inspiration, billedvæg, tips og tricks, billederammer, personlig indretning, kunst, plakatideer, Plakaten, stilfuld indretning, kreative løsninger, kunstnerisk hjem, boligindretning, unikke vægdekorationer">
+   <meta name="robots" content="index, follow">
+   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+   <meta name="language" content="English">
+   <meta name="revisit-after" content="8 days">
+  
+   <title>inspiration</title>
+   <!-- Tilføj Google Fonts link -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="css/inspiration.css">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
   
     <header>
