--- a/galleri.html
+++ b/galleri.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="da">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Galleri</title>
-        <!-- Tilføj Google Fonts link -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/galleri.css"> <!-- Forbinder HTML med CSS -->
-    </head>
+<head>
+       <meta charset="UTF-8">
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!--METATAGS-->
+       <meta name="title" content="PLAKATEN.COM | GALLERI">
+       <meta name="description" content="“Udforsk Plakatens galleri med et stort udvalg af kunst- og designplakater. Find populære kategorier som grafisk, abstrakt, Matisse, vintage og Picasso. Gennemse alle plakater og bliv inspireret til at skabe din egen unikke indretning.”">
+       <meta name="keywords" content="plakater, kunstplakater, designplakater, galleri, grafisk kunst, abstrakt kunst, Matisse, vintage plakater, Picasso, indretning, plakatsamling, populære plakater, kunstbutik, Aarhus, unikke plakater, moderne kunst, vægkunst">
+       <meta name="robots" content="index, follow">
+       <meta name="language" content="English">
+       <meta name="revisit-after" content="8 days">
+
+
+       <title>Galleri</title>
+       <!-- Tilføj Google Fonts link -->
+       <link rel="preconnect" href="https://fonts.googleapis.com">
+       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+       <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+       <link rel="stylesheet" href="css/galleri.css"> <!-- Forbinder HTML med CSS -->
+   </head>
+
 <body>
   <header>
     <nav class="navbar">
