--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Plakaten</title>
-  <link rel="stylesheet" href="css/index.css">
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta http-equiv="X-UA-Compatible" content="ie=edge">
+ <!--METATAGS-->
+<meta name="title" content="PLAKATEN.COM | FORSIDE">
+<meta name="description" content="Velkommen til forsiden af Plakaten, din plakatbutik i Aarhus med et bredt udvalg af kunst- og designplakater. Oplev unikke motiver, kvalitetsrammer og masser af inspiration til at personliggøre din indretning. Find plakater, der passer til din stil, og opdag vores mest populære bestsellers.">
+<meta name="keywords" content="plakater, kunstplakater, designplakater, indretning, Aarhus, plakatbutik, kunst, rammer, speciallavede rammer, bestsellers, personlig indretning, kvalitetsplakater, plakatshop, moderne plakater, unik kunst, Plakaten">
+<meta name="robots" content="index, follow">
+<meta name="language" content="English">
+<meta name="revisit-after" content="8 days">
+
+
+ <title>Plakaten</title>
+ <link rel="stylesheet" href="css/index.css">
+
 
 <!-- Her er linket til koden af vores font fundet på google fonts: https://fonts.google.com/specimen/Poppins -->
 
+
 <link href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
 
