--- a/galleri.html
+++ b/galleri.html
@@ -172,7 +172,7 @@
 
 
 <div class="plakat">
-    <img src="images/Rebecca_Hein_Layers_01-300x400.png">
+    <img src="images/Rebecca_Hein_Layers_01-300x400.png" alt="maleri">
     <div class="plakattekst">
     <h4>Frida Kahlo</h4>
         <p>Illustration med den mexicanske maler Frida Kahlo.</p>
@@ -182,7 +182,7 @@
     </section>
    
     <section class="udvid">
-      <img src="images/udvidpil.png">
+      <img src="images/udvidpil.png" alt="pil">
     </section>
 
 <!-- Her er sitets footer med åbningstider, adresse og kontaktinfomationer -->
