--- a/Inspiration.html
+++ b/Inspiration.html
@@ -8,7 +8,6 @@
    <meta name="description" content="“Bliv inspireret til at skabe din egen unikke billedvæg hos Plakaten. Få tips og tricks til at vælge de rigtige billeder og rammer, og lær, hvordan du kan sammensætte en personlig og stilfuld indretning. Se vores bedste idéer til at give dit hjem et kunstnerisk præg.”">
    <meta name="keywords" content="inspiration, billedvæg, tips og tricks, billederammer, personlig indretning, kunst, plakatideer, Plakaten, stilfuld indretning, kreative løsninger, kunstnerisk hjem, boligindretning, unikke vægdekorationer">
    <meta name="robots" content="index, follow">
-   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
    <meta name="language" content="English">
    <meta name="revisit-after" content="8 days">
   
@@ -59,7 +58,7 @@
     </picture>
 </section>
 <section class="udvid">
-    <img src="images/udvidpil.png">
+    <img src="images/udvidpil.png" alt="pil">
 </section>
 
 <footer class="footer">
