--- a/galleri.html
+++ b/galleri.html
@@ -91,7 +91,7 @@
             <img src="images/Berlin Shapes No1 Poster.png" alt="berlin">
           <div class="plakattekst">
             <h4>Berlin Shapes No1 Poster</h4>
-            <p>Grafisk illustration med sorte og beige figurer og cirkler. </div>
+            <p>Grafisk illustration med sorte og beige figurer og cirkler. 
             </p>
        
             </div>
@@ -164,7 +164,7 @@
     <img src="images/Nikita_Michelsen_Under_solen_2-300x400.png" alt="berlin">
   <div class="plakattekst">
     <h4>Berlin Shapes No1 Poster</h4>
-    <p>Grafisk illustration med sorte og beige figurer og cirkler. </div>
+    <p>Grafisk illustration med sorte og beige figurer og cirkler. 
     </p>
 
     </div>
