--- a/kunstnere.html
+++ b/kunstnere.html
@@ -44,21 +44,21 @@
             </div>
            
             <section class="Annebilleder">
-            <img class="scroll" src="images/plakat108.png">
-            <div class="container1">
-                <img src="images/Anne risum 1.png" alt="Avatar" class="image">
-                <div class="overlay">ANNE RISUM<br>PRINCESS</div>
-            </div>
-            <div class="container2">       
-                <img src="images/Anne Risum 2.png">
-                <div class="overlay">ANNE RISUM<br>KING OF THE STREET</div>
-            </div>
-            <div class="container3"> 
-                <img src="images/Anne Risum 3.png">
-                <div class="overlay">ANNE RISUM<br>RED SHOES</div>
-            </div>
-            <img class="scroll" src="images/plakat110.png">
-            </section>
+                <img class="scroll" src="images/plakat108.png" alt="kvinde">
+                <div class="container1">
+                    <img src="images/Anne risum 1.png" alt="Avatar" class="image">
+                    <div class="overlay">ANNE RISUM<br>PRINCESS</div>
+                </div>
+                <div class="container2">       
+                    <img src="images/Anne Risum 2.png"alt="anne">
+                    <div class="overlay">ANNE RISUM<br>KING OF THE STREET</div>
+                </div>
+                <div class="container3"> 
+                    <img src="images/Anne Risum 3.png" alt="risum">
+                    <div class="overlay">ANNE RISUM<br>RED SHOES</div>
+                </div>
+                <img class="scroll" src="images/plakat110.png" alt="scroll">
+                </section>
             
         </section>
 
