--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </article>
     </section>
       <section class="udvid">
-      <img src="images/udvidpil.png">
+      <img src="images/udvidpil.png" alt="pil">
       </section>
   
   
