--- a/kunstnere.html
+++ b/kunstnere.html
@@ -64,20 +64,20 @@
 
         <section class="FinnNygaard">
             <section class="Finnbilleder">
-            <img class="scroll" src="images/plakat112.png">
+            <img class="scroll" src="images/plakat112.png" alt="finn">
             <div class="container4">
-            <img src="images/Finn Nygaard 1.png">
+            <img src="images/Finn Nygaard 1.png" alt="blå">
             <div class="overlay">FINN NYGAARD<br>TRIBUTE TO NHØP</div>
             </div>
             <div class="container5">
-            <img src="images/Finn Nygaard 2.png">
+            <img src="images/Finn Nygaard 2.png" alt="rød">
             <div class="overlay">FINN NYGAARD<br>HERBIE HANCOCK</div>
             </div>
             <div class="container6">
-            <img src="images/Finn Nygaard 3.png">
+            <img src="images/Finn Nygaard 3.png" alt="gul">
             <div class="overlay">FINN NYGAARD<br>AARHUS JAZZ FESTIVAL</div>
             </div>
-            <img class="scroll" src="images/plakat111.png">
+            <img class="scroll" src="images/plakat111.png" alt="finn2">
             </section>
 
             <div class="broedtekst2">
@@ -93,24 +93,24 @@
             </div>
 
             <section class="Asgerbilleder">
-            <img class="scroll" src="images/plakat113.png">
+            <img class="scroll" src="images/plakat113.png" alt="asgervenstre">
             <div class="container7">
-            <img src="images/Asger Jorn 1 .png">
+            <img src="images/Asger Jorn 1 .png" alt="krydsedulle1">
             <div class="overlay">ASGER JORN<br>LE FUTUR DU PASSÈ</div>
             </div>
             <div class="container8">
-            <img src="images/Asger Jorn 2.png">
+            <img src="images/Asger Jorn 2.png" alt="krydsedulle2">
             <div class="overlay">ASGER JORN<br>ETUDES ET SURPRIESE</div>
             </div>
             <div class="container9">
-            <img src="images/Asger Jorn 3.png">
+            <img src="images/Asger Jorn 3.png" alt="krydsedulle3">
             <div class="overlay">ASGER JORN<br>LES DEUX ELEMENTS</div>
             </div>
-            <img class="scroll" src="images/plakat114.png">
+            <img class="scroll" src="images/plakat114.png" alt="asgervenstre">
             </section>
         </section>
         <section class="udvid">
-        <img src="images/udvidpil.png">
+        <img src="images/udvidpil.png" alt="pil">
         </section>
     </main>
 
