--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <!-- Her er videoen der kører under vores logo og menupunkter på forsiden, med hjælp fra: https://www.youtube.com/watch?v=znqUwx0b0HI -->
   <video autoplay loop muted plays-inline class="back-video">
-    <source src="images/klippetvideo.mp4" type="video/mp4">
+    <source src="video/klippet video github.mp4" type="video/mp4">
   </video>
   
   <div class="logo">
